# smartsheet-ai-assistant

./: .gitignore  README.md  app.py  gui.py  prompt.py  setup.sh  tools.py
backend/: agent.py  example_tasks.py  prompt.py  tools.py
frontend/: background.js  content-script.js  manifest.json  package.json  popup.css  popup.html  popup.js  webpack.config.js
server/: README.md  pyproject.toml
server/app/: server.py
server/smartersheet/: agent.py  example_tasks.py  prompt.py  smartsheet_sample_app.py  tools.py
