[tool.poetry]
name = "smartersheet"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.23.2"
langserve = { extras = ["server"], version = ">=0.0.30" }
pydantic = "<2"
langchain = "^0.1.17"
python-dotenv = "^1.0.1"
langchain-anthropic = "^0.1.11"
smartsheet-python-sdk = "^3.0.2"

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
